--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^3.0.0",
 		"typescript": "^4.0.0",
-		"wrangler": "2.0.23"
+		"wrangler": "2.0.23",
+		"ws": "^8.8.1"
 	},
 	"dependencies": {
 		"@cloudflare/kv-asset-handler": "~0.1.2",
 		"@trpc/server": "^10.0.0-alpha",
+		"@types/websocket": "^1.0.5",
 		"dog": "^1.1.3",
 		"zod": "^3.17.10"
 	},
