--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@trpc/server": "^10.0.0-alpha",
 		"@types/websocket": "^1.0.5",
 		"dog": "^1.1.3",
+		"nanoevents": "^7.0.1",
+		"rxjs": "^7.5.6",
 		"zod": "^3.17.10"
 	},
 	"scripts": {
